--- a/index.html
+++ b/index.html
@@ -1,112 +1,296 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>paytam ssecure & fast upi paymet</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--favicon-->
-    <link rel="icon"href="https://paytm.com/offer/assets/img/share-p.png"/>
-    <!--paytm css-->
-    <link rel="stylesheet"href="./paytm.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- link css bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- external css file -->
+  <link rel="stylesheet" href="style.css">
+  <!-- fav icon -->
+  <link rel="icon"
+    href="https://png.pngtree.com/png-clipart/20200701/original/pngtree-business-concept-of-online-shopping-e-commerce-png-image_5345089.jpg">
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/27717ce53c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <!--navbar-->
-    <nav class="navbar">
-        <a href="#"><img src="images/images/1.png" width="20%"/></a>
-        <a href="#">paytm for consumer</a>
-        <a href="#">paytm for busniess</a>
-        <a href="#">company</a>
-        <a href="#">investor relations</a>
-        <a href="#">career</a>
-        <a href="#"><button>sign in<img src="images/images/2.svg"width=""/></button></a>
-        <a href="#"></a>
-    </nav>
-    <!--wallet-->
-    <div class="wallet">
-    <p><b> No Wallet KYC Requried</b>&#128522 to pay using UPI on Paytm.<b>Learn More</b></p>
-    </div>
-    <!--section2-->
-    <section class="sec2">
-        <div class="one">
-            <img src="images/images/3.png"alt="paymet-container-logo"/>
-            <p>Recharge and pay bills, book flights & movies tickets, invest in stocks & mutual funds, and do a lot more.
-            </p> <br>
-            <button>download paytem app
-                <i class="fa-brands fa-apple"></i>
-                <i class="fa-brands fa-google-play"></i>
-            </button>
-        </div>
-        <div class="two">
-            <img src="images/images/4.png" alt="">
-            <p> Recharge and bill</p>
-        </div>
-    </section>
-    <!--section3-->
-    <section class="sec3">
-        <h1 class="head3">Recharge & pay bills on paytm</h1>
-        <div class="icons">
-            <a>
-                <img src="images/5.png"/>
-                <p>Recharge Prepaid moblie</p>
+  <!-- nav bar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://images-platform.99static.com//PW3ljT2-AH9wZ6WfgAcnTAYDVh8=/354x370:1622x1638/fit-in/500x500/99designs-contests-attachments/110/110121/attachment_110121803"
+          alt="" width="50%"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#Home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#About">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Products">Product</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Payment
             </a>
-            <a>
-                <img src="images/images/6.png"/>
-                <p>Recharge Prepaid moblie</p>    
-            </a>
-            <img src="images/images/7.png"/>
-            <p>Recharge Prepaid moblie</p>
-        </a>
-        <a>
-        <img src="images/images/8.png"/>
-        <P>Recharge Prepaid moblie</P>
-        </a>
-        <a>
-            <img src="images/images/9.png"/>
-            <p>Recharge Prepaid moblie</p>
-        </a>
-        <a>
-            <img src="images/images/10.png">
-            <p>Recharge Prepaid moblie</p>
-        </a>
-        <a>
-            <img src="images/images/11.png"/>
-            <p>Recharge Prepaid moblie</p>
-        </a>
-             </div>
-    </section>
-    <!--section4-->
-<section class="sec4">
-    <div class="main4">
-        <img src="images/images/25.png" width="60%"/>
-        <h1>unlimited Cashback</h1>
-        <p>Paytm HDFC Bank select Credit Card. A card with assumed Cashback and incredible offers.</p>
-        <img src="images/images/26.png" width="805"/>
-     </div>
-     <div class="main4">
-        <img src="images/images/27.png" width="20%"/>
-        <h1>India's Most Sincere Credit Card</h1>
-        <p>Paytm SBI Card </p>
-        <img src="images/images/28.png" width="30%s"/>
-     </div>
-
-</section>
-<!--section5-->
-<section class="sec5">
-    <div class="main5">
-        <img src="images/images/40.png" width="6%"/>
-        <h1>POS Billing Software</h1>
-        <p>Say hello to smart Retail Busniess Management</p>
-        <img src="images/images/41.png" width="7%"/>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#Online">Online</a></li>
+              <li><a class="dropdown-item" href="#Cash on delivery">Cash on delivery</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#Paytm">Other methods</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Contacts" tabindex="-1" aria-disable="true">Contact</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-    <div class="main5">
-        <img src="images/images/42.png" width="8%"/>
-        <h1>Paytm on Advertise</h1>
-        <p>Grow your busniess by Advertise</p>
-        <img src="images/images/43.png" width="9%"/>
+  </nav>
+  <!--home-->
+  <section class="bgimg">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center mt-5">
+          <h1 class="head">Organic Store</h1>
+          <button class="btn btn-success mt-4 bt">Shop Here<i class="fa-solid fa-cart-shopping"></i></button>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
+  <!--About-->
+  <section id="about">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="https://img.freepik.com/free-photo/ice-crem-balls-decorated-with-mint-glass-vase-wooden-table_141793-2910.jpg?t=st=1735560320~exp=1735563920~hmac=b8c0b4bc435b6e3a70de19633044084e176a338d6570fa350f89500bf3701656"
+            class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://img.freepik.com/premium-photo/colorful-red-pink-yellow-green-white-ice-cream-balls_80743-2473.jpg?w=1060"
+            class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://img.freepik.com/free-photo/melting-ice-cream-with-orange_23-2150373250.jpg?t=st=1735561032~exp=1735564632~hmac=64032101d728e2203650c164c2392489c9cdee96ec893d897c3cb8be7b002c6b&w=740"
+            class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-6 one">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt vel eum? Impedit
+            exercitationem ipsum corporis voluptatem accusamus nemo eveniet aspernatur minus neque tempore. Veritatis,
+            vero ipsam. Eveniet, exercitationem provident.</p>
+        </div>
+        <div class="col-12 col--md-6 col-lg-6 two">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolorem enim quo officia suscipit
+            veniam at, consequuntur delectus aspernatur similique facilis doloremque odit. Doloremque earum ad beatae.
+            Unde, dicta mollitia?</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--products-->
+  <section id="products" class="mt-5">
+    <h1 style="color: green;text-align: center;font-size:45px;">Betty Bags</h1>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="https://img.freepik.com/free-psd/delicious-vanilla-ice-cream-with-chocolate-drizzle-shavings_632498-24904.jpg?t=st=1735644871~exp=1735648471~hmac=d1f249d6ddf832afcbfc0868531fe1d15320c07859ac16a61347880ead48fd24&w=826" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Chocolate</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">40rs</p>
+              <a href="#" class="btn btn-success">buy</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--paytm-->
+      <section id="Payment" class="mt-5">
+        <h1 style="color: green;font-size: 45px;" class="text-center">Payment</h1>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col--md-6 col-lg-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">Card Username</span>
+                <input type="text" class="form-control"aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div class="col-12 col--md-6 col-lg-6">
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">Card Network</span>
+                  <input type="text" class="form-control"aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <div class="input-group mb-3">
+                  <input type="date" class="form-control" placeholder="Username" aria-label="Username">
+                  <span class="input-group-text">CW</span>
+                  <input type="Number" class="form-control" placeholder="Server" aria-label="Server">
+                </div>
+                <button class="btn btn-success">Paytm</button>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--contact-->
+      <section id="contact" class="mt-5">
+        <h1 style="color: green;font-size: 45px;" class="text-center">contact</h1>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col--md-6 col-lg-6">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3825.4031781930053!2d80.64475207545516!3d16.505731084238867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35fb51a430ffad%3A0xe6ed5ede725b304b!2sCodegnan%20Vijayawada%20-%20Python%2C%20Java%2C%20%26%20Software%20Testing%20training%20institute!5e0!3m2!1sen!2sin!4v1735730538067!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="col-12 col--md-6 col-lg-6 mt-4">
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Comments</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button class="btn btn-success">Contact</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--footer-->
+      <section class="bgi">
+        <div class="Container">
+          <div class="row">
+            <div class="col-12 text-center">
+              <img src="https://images-platform.99static.com//PW3ljT2-AH9wZ6WfgAcnTAYDVh8=/354x370:1622x1638/fit-in/500x500/99designs-contests-attachments/110/110121/attachment_110121803"
+          alt="" width="10%"></a>
+          <h1 class="text">Betty Bag</h1>
 
-    
+
+
+           </div>
+          </div>
+        </div>
+        <div class="col-12 text-center mt-3 icons">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div class="col-12 text-center">
+          <p class="last">All copy rights reversed to codegnan forent end teams</p>
+        </div>
+      </section>                                                                                                                      
+  <!-- link js bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
